Align main body vertically on smaller window sizes #205 issue solve

--- a/src/renderer/styles/tailwind.css
+++ b/src/renderer/styles/tailwind.css
@@ -118,8 +118,3 @@
     font-feature-settings: "rlig" 1, "calt" 1;
   }
 }
-
-
-::-webkit-scrollbar{
-  display: none;
-}
